Added lerewz portion of writeup and latex document base

--- a/homework1/MakeFile
+++ b/homework1/MakeFile
@@ -1,4 +1,20 @@
-all: hw1.c
+default: all
+
+doc:
+	latex writeup.tex
+	dvips writeup.dvi
+	ps2pdf writeup.ps
+
+hw1:
 	gcc -pthread -o hw1 -g hw1.c
+
+all: hw1 doc clean
+
+
 clean:
 	rm -f *.o *.exe
+	rm -f writeup.aux
+	rm -f writeup.dvi
+	rm -f writeup.log
+	rm -f writeup.out
+	rm -f writeup.ps
