cleaned up code, modified time printing format

--- a/concurrency2/Makefile
+++ b/concurrency2/Makefile
@@ -1,20 +1,9 @@
 default: all
 
-doc:
-	latex writeup.tex
-	dvips writeup.dvi
-	ps2pdf writeup.ps
-
 conc2:
-	gcc -pthread -o conc2 -g conc2.c
+	javac DiningPhil.java
 
-all: conc2 doc clean
-
+all: conc2
 
 clean:
-	rm -f *.o *.exe
-	rm -f writeup.aux
-	rm -f writeup.dvi
-	rm -f writeup.log
-	rm -f writeup.out
-	rm -f writeup.ps
+	rm -f *.class
