Writeup styling complies with guidelines, expanded abstract and design

--- a/homework3/Makefile
+++ b/homework3/Makefile
@@ -1,9 +1,12 @@
 default: all
 
 doc:
-	latex writeup.tex
-	dvips writeup.dvi
-	ps2pdf writeup.ps
+	pdflatex writeup.tex
+	bibtex writeup
+	pdflatex writeup.tex
+	pdflatex writeup.tex
+	#dvips writeup.dvi
+	#ps2pdf writeup.ps
 
 all: doc clean
 
@@ -15,3 +18,6 @@ clean:
 	rm -f writeup.log
 	rm -f writeup.out
 	rm -f writeup.ps
+	rm -f writeup.toc
+	rm -f writeup.bbl
+	rm -f writeup.blg
